--- a/css/main.css
+++ b/css/main.css
@@ -141,10 +141,11 @@ h1 em, h2 em, h3 em, h4 em, h5 em, h6 em {
 
 /* Аватар */
 #avatar {
-    width: 200px; /* Ширина аватара */
-    height: 200px; /* Высота аватара */
+    width: 180px; /* Ширина аватара */
+    height: 180px; /* Высота аватара */
     border: 10px solid #ecf0f1; /* Рамка аватара (светло-серый) */
     border-radius: 50%; /* Круглая форма */
+    object-fit: cover; /* Сохранение пропорций изображения */
 }
 
 /* Круглые изображения */
